# SQLEngine

./: CMakeLists.txt  Makefile  Readme.md
.github/workflows/: CompileAll.yml  autotagpush.yml  c-cpp.yml  cmake-multi-platform.yml
examples/: snake.sql
src/: sqlEngine.cpp
